# m365_assistant

./: .env  LICENSE  README.md  pyproject.toml
m365_assistant/: main.py
m365_assistant/agent/: client.py  graph_builder.py  prompts.py  runner.py  state.py
m365_assistant/core/: auth_manager.py  config.py  graph_client.py
m365_assistant/mcp/: tools.py
m365_assistant/services/: calendar_service.py  mail_service.py
